--- a/slides/genomics/midterm-2019.ipynb
+++ b/slides/genomics/midterm-2019.ipynb
@@ -147,7 +147,13 @@
    "source": [
     "<div class=\"alert alert-success\">\n",
     "    <b>Question 5:</b>\n",
-    "    A man and a woman who are both carriers of the same mutation that causes Tay Sachs (an autosomal recessive disease) decide to have children. What is the probability that their first child will be born with Tay Sachs? What is the probability that their second child will be born with Tay Sachs? What is the probability, if they have four children, that at least one will have Tay Sachs? \n",
+    "    A man and a woman who are both carriers of the same mutation that causes Tay Sachs (an autosomal recessive disease) decide to have children. \n",
+    "    \n",
+    "(1) What is the probability that their first child will be born with Tay Sachs? \n",
+    "\n",
+    "(2) What is the probability that their second child will be born with Tay Sachs? \n",
+    "\n",
+    "(3) What is the probability, if they have four children, that at least one will have Tay Sachs? \n",
     "</div>"
    ]
   },
@@ -168,16 +174,17 @@
     "    <b>Question 6:</b>\n",
     "    Answer separately for each image below. What is the most likely mode of inheritance in each pedigree? \n",
     "    \n",
-    "![](images/midterm-pedigree-1.jpg)\n",
-    "![](images/midterm-pedigree-2.jpg)\n",
-    "![](images/midterm-pedigree-3.jpg)\n",
+    "![](https://eaton-lab.org/data/midterm-pedigree-1.jpg)\n",
+    "![](https://eaton-lab.org/data/midterm-pedigree-2.jpg)\n",
+    "![](https://eaton-lab.org/data/midterm-pedigree-3.jpg)\n",
+    "\n",
     "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +228,8 @@
     "(1) What approach could you use to estimate genome size and heterozygosity?  \n",
     "(2) Why does genome size and heterozygosity matter for assembling a genome?   \n",
     "(3) Approximately what size range are salamander genomes, generally?   \n",
-    "(4) Is this considered large or small? (5) How would this affect your plan for spending your $50K efficiently?     \n",
+    "(4) Is this considered large or small?  \n",
+    "(5) How would this affect your plan for spending your $50K efficiently?     \n",
     "</div>\n",
     "\n"
    ]
@@ -266,7 +274,7 @@
     "<div class=\"alert alert-success\">\n",
     "    <b>Question 10:</b>\n",
     "    \n",
-    "You cross a Â· b / A Â· B x a Â· b / a Â· b and get 100 offspring: 25 a Â· B / a Â· b, 25 A Â· b / a Â· b, 25 a Â· b / a Â· b, 25 A Â· B / a Â· b. \n",
+    "You cross <b><tt>a·b/A·B x a·b/a·b</tt></b> and get 100 offspring: 25 <b><tt>a·B/a·b</tt></b>, 25 <b><tt>A·b/a·b</tt></b>, 25 <tt><b>a·b/a·b</b></tt>, 25 <tt><b>A·B/a·b</b></tt>. \n",
     "\n",
     "\n",
     "(1) How many centimorgans are there between A(a) and B(b)? \n",
@@ -275,7 +283,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "Next you cross a Â· b / A Â· B x a Â· b / a Â· b and get 100 offspring: 10 a Â· B / a Â· b, 10 A Â· b / a Â· b, 40 a Â· b / a Â· b, 40 A Â· B / a Â· b. \n",
+    "Next you cross <b><tt>a·b/A·B x a·b/a·b</tt></b> and get 100 offspring: 10 <tt><b>a·B/a·b</b></tt>, 10 <tt><b>A·b/a·b</b></tt>, 40 <tt><b>a·b/a·b</b></tt>, and 40 <tt><b>A·B/a·b</b></tt>. \n",
     "\n",
     "(3) How many centimorgans are there between A(a) and B(b)? \n",
     "\n",
@@ -408,6 +416,9 @@
     "\n",
     "<br>\n",
     "(2) How many recombination events does each chromosome pair have during meiosis? Give a reasonable range? \n",
+    "<br>\n",
+    "<br>\n",
+    "(3) What effect does the gene PRDM9 have on recombination in mice? \n",
     "\n",
     "</div>"
    ]
