--- a/slides/genomics/midterm-2019.ipynb
+++ b/slides/genomics/midterm-2019.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\<div class=\"alert alert-success\">\n",
+    "<div class=\"alert alert-success\">\n",
     "    <b>Question 3:</b> \n",
     "Write Python code to accomplish the following three tasks. Pay careful attention to exactly what each task is asking for.\n",
     "<br>\n",
