--- a/slides/genomics/midterm-2019.ipynb
+++ b/slides/genomics/midterm-2019.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## answer here "
+    "# answer here"
    ]
   },
   {
@@ -77,20 +77,20 @@
     "Write Python code to accomplish the following three tasks. Pay careful attention to exactly what each task is asking for.\n",
     "<br>\n",
     "<br>\n",
-    "(1) Write a Python *dictionary* that represents barcode information that could be used to demultiplex samples. The keys of the dictionary should be sample names (anything you wish) and the values of the dictionary should be unique six base barcode sequences.\n",
+    "(1) Write a Python <i>dictionary</i> that represents barcode information that could be used to demultiplex samples. The keys of the dictionary should be sample names (any string you choose) and the values of the dictionary should be unique six base barcode sequences as string objects.\n",
     "<br>\n",
     "<br>\n",
-    "(2) Write a Python *function* to return a random sequence of DNA of a given length determined by an argument provided to the function. \n",
+    "(2) Write a Python <i>function</i> to return a random sequence of DNA of a given length determined by an argument provided to the function. The returned sequence should be a string object.\n",
     "<br>\n",
     "<br>\n",
-    "(3) Write a Python *function* to return the *reverse complement* of a sequence that is given to the function as an argument. \n",
+    "(3) Write a Python <i>function</i> to return the <i>reverse complement</i> of a sequence that is given to the function as an argument. The returned sequence should be a string object.\n",
     "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,18 +185,29 @@
     "<div class=\"alert alert-success\">\n",
     "    <b>Question 6:</b>\n",
     "    Answer separately for each image below. What is the most likely mode of inheritance in each pedigree? \n",
-    "    \n",
-    "![](https://eaton-lab.org/data/midterm-pedigree-1.jpg)\n",
-    "![](https://eaton-lab.org/data/midterm-pedigree-2.jpg)\n",
-    "![](https://eaton-lab.org/data/midterm-pedigree-3.jpg)\n",
     "\n",
+    "<hr>\n",
+    "<h3>(1)</h3>\n",
+    "\n",
+    "![](https://github.com/eaton-lab/eaton-lab.github.io/raw/master/data/midterm-pedigree1.png)\n",
+    "<hr>\n",
+    "\n",
+    "<h3>(2)</h3>\n",
+    "\n",
+    "![](https://github.com/eaton-lab/eaton-lab.github.io/raw/master/data/midterm-pedigree2.png)\n",
+    "<hr>\n",
+    "\n",
+    "<h3>(3)</h3>\n",
+    "\n",
+    "![](https://github.com/eaton-lab/eaton-lab.github.io/raw/master/data/midterm-pedigree3.png)\n",
+    "<hr>\n",
     "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +440,7 @@
    "source": [
     "<div class=\"alert alert-success\">\n",
     "    <b>Question 14:</b>\n",
-    "    \n",
+    "<br>\n",
     "(1) Describe briefly, what is RAD-seq?  \n",
     "<br>\n",
     "<br> \n",
